Added docker-compose.yml for tests